unpackaged/main/default/objects/Account/fields/Alpha_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Alpha_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alpha checkbox</label>
    <type>Checkbox</type>
</CustomField>