unpackaged/main/default/objects/Account/fields/Big_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Big_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Big checkbox</label>
    <type>Checkbox</type>
</CustomField>