unpackaged/main/default/objects/Account/fields/Legacy_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Checkbox</label>
    <type>Checkbox</type>
</CustomField>